Move colors to CSS, fix spacing

--- a/src/styles/DroppableContainer.css
+++ b/src/styles/DroppableContainer.css
@@ -1,4 +1,9 @@
 .droppableContainer {
-    width: 110px;
-    height: 110px;
+    width: 100px;
+    height: 100px;
+    background: #EFECEA;
+}
+
+.grey {
+    background: #DFDCDA;
 }
